--- a/cardappio_mobile/pubspec.yaml
+++ b/cardappio_mobile/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0 # Adicione esta linha (ou a versão mais recente)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
