trocando imagem e alerta de clicar em inciar

--- a/cardappio_mobile/pubspec.yaml
+++ b/cardappio_mobile/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - lib/images/prato.jpg
+    - lib/images/prato.jpeg
     - lib/images/
 
 
