--- a/cardappio_mobile/pubspec.yaml
+++ b/cardappio_mobile/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   assets:
     - lib/images/prato.jpeg
     - lib/images/
+    - 'lib/images/camarao.jpeg'
+    - 'lib/images/macarrao.jpeg'
+    - 'lib/images/pf.jpeg'
 
 
   # To add assets to your application, add an assets section, like this:
