--- a/cardappio_mobile/pubspec.yaml
+++ b/cardappio_mobile/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0 # Adicione esta linha (ou a versão mais recente)
   intl: ^0.20.2
+  cached_network_image: ^3.3.1
   carousel_slider: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
